<resources>
    <string name="app_name">Plato</string>
    <string name="chat"> chat  </string>
    <string name="home"> home  </string>
    <string name="friends"> friends  </string>
    <string name="play"> play  </string>
    <string name="send" />
    <string name="enter_your_message" />

    <string name="sign_in">SIGN IN</string>

    <string name="full_name">Full Name</string>

    <string name="password"> Password</string>

    <string name="continue_text">Continue</string>

    <string name="enter_credentials">Enter Credentials</string>

    <string name="or_sign_up_instead">Or Sign Up instead!</string>

    <string name="create_an_account">Create an Account</string>


    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">SING UP</string>
    <string name="last_msg">last msg</string>
    <string name="name">Name</string>


</resources>
